<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="cost_of_service_edit_text">Cost of Service</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="custom_tip">Custom tip</string>
    <string name="custom_tip_percentage">Custom tip %</string>
    <string name="custom_tip_percentage_error">Custom tip cannot be empty.</string>
    <string name="cost_of_service_error">Cost of service cannot be empty.</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip amount: %s</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="euro_currency_switch_text">Print result with another currency?</string>
    <string name="currency_exchange">Currency Exchange with tip: %s</string>
    <string name="currency_exchange_tip">Converted cost with rounded tip: %s</string>
    <string name="currency_exchange_cost">Converted cost Of Service: %s</string>
    <string name="error_cost">No cost entered</string>
    <string name="error_change">No currency exchange, enter the cost</string>
    <string name="button_exchange"><![CDATA[$->€]]></string>
</resources>